visual changes to the table

--- a/src/shared/assets/styles/variables.scss
+++ b/src/shared/assets/styles/variables.scss
@@ -6,6 +6,7 @@ $color-gray-2: #d9e1ec;
 $color-gray-3: #bbbbbb;
 $color-gray-4: #b0b0b0;
 $color-gray-5: #8d8d8d;
+$color-gray-6: #a4a4a4;
 
 $color-red: #b93c3c;
 $color-orange: #cc892a;
