--- a/src/widgets/create-request-modal/CreateRequestModal.scss
+++ b/src/widgets/create-request-modal/CreateRequestModal.scss
@@ -25,7 +25,6 @@
 		font-size: 14px !important;
 		border: 1px solid $color-gray-4 !important;
 		border-radius: 8px !important;
-
 		background-color: transparent !important;
 
 		&::placeholder {
@@ -79,5 +78,26 @@
 			border: 1px solid $color-black;
 			border-radius: 5px;
 		}
+	}
+}
+
+@media (max-width: 820px) {
+	.container {
+		flex-direction: column;
+	}
+
+	.chakra-modal__content {
+		width: 100vw !important;
+		height: 100vh !important;
+		max-width: 100vw !important;
+		max-height: 100vh !important;
+		margin: 0 !important;
+		border-radius: 0 !important;
+	}
+}
+
+@media (max-width: 455px) {
+	.modal__select__priority-addition {
+		display: none;
 	}
 }
