--- a/src/widgets/table/MyTable.scss
+++ b/src/widgets/table/MyTable.scss
@@ -106,6 +106,14 @@
 }
 
 @media (max-width: 1050px) {
+	.my-table__cell__created-at,
+	.my-table__cell__technician,
+	.my-table__cell__reaction,
+	.my-table__cell__category,
+	.my-table__cell__priority__level {
+		display: none !important;
+	}
+
 	.my-table {
 		table,
 		thead,
@@ -128,8 +136,7 @@
 
 		tr {
 			display: grid;
-			grid-template-columns: 1fr 1fr;
-			gap: 12px;
+			gap: 5px;
 			padding: 16px;
 			background: white;
 			border: 1px solid $color-gray-1;
@@ -145,34 +152,8 @@
 			border: none;
 			padding: 0;
 			margin: 0;
-			width: 100%;
 		}
 
-		&__cell {
-			&__number {
-				grid-column: 1 / -1;
-				margin-bottom: 4px;
-			}
-
-			&__pharmacy {
-				.cell-container {
-					flex-wrap: wrap;
-				}
-			}
-
-			&__priority {
-				.cell-container {
-					img {
-						flex-shrink: 0;
-					}
-				}
-			}
-
-			&__status {
-				.cell-container {
-					width: 100%;
-				}
-			}
-		}
+		/* Первая строка - элементы с тегом, иконкой приоритета и статусом */
 	}
 }
