--- a/src/widgets/create-request-modal/CreateRequestModal.scss
+++ b/src/widgets/create-request-modal/CreateRequestModal.scss
@@ -73,6 +73,11 @@
 		border: 1px dashed $color-gray-4;
 		border-radius: 8px !important;
 		background-color: transparent !important;
+		transition: all 0.2s ease;
+
+		&:hover {
+			opacity: 50%;
+		}
 	}
 
 	&__footer {
@@ -84,13 +89,27 @@
 			padding: 8px 16px;
 			color: $color-white;
 			border-radius: 5px;
+			border: 1px solid $color-black;
 			background-color: $color-black;
+			transition: all 0.4s ease;
+
+			&:hover {
+				color: $color-black;
+				background-color: $color-green;
+			}
 		}
 
 		&__cancel-btn {
 			padding: 8px 16px;
 			border: 1px solid $color-black;
 			border-radius: 5px;
+			transition: all 0.4s ease;
+
+			&:hover {
+				color: $color-white;
+				background-color: $color-red;
+				border: 1px solid $color-red;
+			}
 		}
 	}
 }
